Successful SAM build