@@ -17,6 +17,26 @@ COPY HelloWorldFunction HelloWorldFunction
 WORKDIR /HelloWorldFunction
 RUN mvn clean package
 
+# Find JDK module dependencies dynamically from the uber jar
+RUN jdeps -q \
+    --ignore-missing-deps \
+    --multi-release 18 \
+    --print-module-deps \
+    target/function.jar > jre-deps.info
+
+# Create a slim Java 18 JRE which only contains the required modules to run the function
+RUN jlink --verbose \
+    --compress 2 \
+    --strip-java-debug-attributes \
+    --no-header-files \
+    --no-man-pages \
+    --output /jre18-slim \
+    --add-modules $(cat jre-deps.info)
+
+# Use Javas Application Class Data Sharing feature
+# It creates the file /jre18-slim/lib/server/classes.jsa
+RUN /jre18-slim/bin/java -Xshare:dump
+
 # Package everything together into a custom runtime archive
 WORKDIR /
 COPY bootstrap bootstrap
@@ -25,3 +45,4 @@ RUN cp /HelloWorldFunction/target/function.jar function.jar
 RUN zip -r runtime.zip \
     bootstrap \
     function.jar \
+    /jre18-slim
